RESOLVED FIXED223545
Crash in ReplaceSelectionCommand::doApply()
https://bugs.webkit.org/show_bug.cgi?id=223545
Summary Crash in ReplaceSelectionCommand::doApply()
Julian Gonzalez
Reported 2021-03-19 17:15:50 PDT
e.g. frame #0: WebCore`WebCore::CompositeEditCommand::splitTreeToNode(WebCore::Node&, WebCore::Node&, bool) frame #1: WebCore`WebCore::ReplaceSelectionCommand::doApply() frame #2: WebCore`WebCore::CompositeEditCommand::apply() frame #3: WebCore`WebCore::executeInsertFragment(WebCore::Frame&, WTF::Ref<WebCore::DocumentFragment, WTF::RawPtrTraits<WebCore::DocumentFragment> >&&) frame #4: WebCore`WebCore::executeInsertNode(WebCore::Frame&, WTF::Ref<WebCore::Node, WTF::RawPtrTraits<WebCore::Node> >&&) frame #5: WebCore`WebCore::executeInsertImage(WebCore::Frame&, WebCore::Event*, WebCore::EditorCommandSource, WTF::String const&) frame #6: WebCore`WebCore::Document::execCommand(WTF::String const&, bool, WTF::String const&) <rdar://problem/73938060>
Attachments
Patch (3.94 KB, patch)
2021-03-19 17:44 PDT, Julian Gonzalez
no flags
Julian Gonzalez
Comment 1 2021-03-19 17:44:26 PDT
EWS
Comment 2 2021-03-22 23:19:38 PDT
Committed r274847: <https://commits.webkit.org/r274847> All reviewed patches have been landed. Closing bug and clearing flags on attachment 423794 [details].
Note You need to log in before you can comment on or make changes to this bug.