Crash in ReplaceSelectionCommand::doApply() https://bugs.webkit.org/show_bug.cgi?id=223545

Patch by Julian Gonzalez <julian_a_gonzalez@apple.com> on 2021-03-22
Reviewed by Ryosuke Niwa.

Source/WebCore:

Test: editing/execCommand/insert-image-in-composed-list.html

Add a missing check in ReplaceSelectionCommand::doApply()
to prevent calling splitTreeToNode() with nullptr.

* editing/ReplaceSelectionCommand.cpp:
(WebCore::ReplaceSelectionCommand::doApply):

LayoutTests:

Add a test to catch this null pointer dereference.
Thanks to Ryosuke Niwa for significant work in reducing
this test case.

* editing/execCommand/insert-image-in-composed-list-expected.txt: Added.
* editing/execCommand/insert-image-in-composed-list.html: Added.

Canonical link: https://commits.webkit.org/235634@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@274847 268f45cc-cd09-0410-ab3c-d52691b4dbfc